# arya-STARK

./: .gitignore  COMMERCIAL_USE.md  Cargo.toml  LICENSE  README.md  install.sh  install_resnet34.sh  pyproject.toml  setup_env.sh  test.py
.github/workflows/: ci.yml
crypto-artifacts/clients/round1_client0/: metadata.json  proof_public_output.txt
crypto-artifacts/clients/round1_client1/: metadata.json  proof_public_output.txt
crypto-artifacts/clients/round1_client2/: metadata.json  proof_public_output.txt
crypto-artifacts/clients/round2_client0/: metadata.json  proof_public_output.txt
crypto-artifacts/clients/round2_client1/: metadata.json  proof_public_output.txt
crypto-artifacts/clients/round2_client2/: metadata.json
crypto-artifacts/server/round1/: aggregation_metadata.json  verification_client0.json  verification_client1.json  verification_client2.json
crypto-artifacts/server/round2/: aggregation_metadata.json  verification_client0.json  verification_client1.json  verification_client2.json
python/arya_stark/: __init__.py  config.py  encoding.py
python/arya_stark/analysis/: __init__.py  baselines.py  plotting.py
python/arya_stark/client/: __init__.py  byzantine_client.py  crypto_client.py  honest_client.py  stark_bridge.py
python/arya_stark/crypto/: __init__.py  mldsa.py
python/arya_stark/data/: __init__.py  loaders.py  partition.py
python/arya_stark/metrics/: __init__.py
python/arya_stark/models/: __init__.py  linear.py  mlp.py  resnet34.py
python/arya_stark/optimizations/: __init__.py
python/arya_stark/server/: __init__.py  aggregator.py  orchestrator.py
python/experiments/: __init__.py
python/tests/: __init__.py  test_aggregator.py  test_aggregator_robust.py  test_baselines.py  test_byzantine_client.py  test_byzantine_e2e.py  test_config.py  test_crypto_e2e.py  test_crypto_integration.py  test_encoding.py  test_encoding_rust_compat.py  test_linear_model.py  test_loaders.py  test_long_runs.py  test_mldsa.py  test_mldsa_rust_compat.py  test_mlp_fl.py  test_mlp_model.py  test_orchestrator.py  test_partition.py  test_plotting.py  test_stark_bridge.py
rust/mldsa-bridge/: Cargo.toml
rust/mldsa-bridge/src/: lib.rs
rust/stark-prover/: Cargo.toml
rust/stark-prover/src/: encoding.rs  lib.rs  prover.rs
rust/stark-prover/src/air/: dot_product.rs  mod.rs
rust/tests/: regression.rs  test_proof_size.rs
scripts/: build_rust.sh  compare_baselines.py  generate_figures.py  long_runs.py  run_quick_validation.sh
