[workspace]
members = [
    "rust/stark-prover",
    "rust/mldsa-bridge",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["arya-STARK team"]
license = "MIT"

[workspace.dependencies]
# STARK dependencies
winterfell = "0.7"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
constant_time_eq = "0.3"
blake3 = "1.5"
proptest = "1.0"

# ML-DSA dependencies
oqs = "0.10"
